samples/_failures_safe/1761175749_3f5b0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25bdb241.c: In function ‘main’:
./samples/SAFE/__tmp_25bdb241.c:194:30: error: missing terminating " character
  194 |         input[strcspn(input, "\n
      |                              ^~~
./samples/SAFE/__tmp_25bdb241.c:194:9: error: expected expression at end of input
  194 |         input[strcspn(input, "\n
      |         ^~~~~
./samples/SAFE/__tmp_25bdb241.c:194:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_25bdb241.c:194:9: error: expected declaration or statement at end of input
